--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,24 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('jakarta.platform:jakarta.jakartaee-web-api:9.1.0')
-
+    //for access DB
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
-
     // https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa
     implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.2'
+
+    //for logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    //for Rest API
+    implementation('org.glassfish.jersey.containers:jersey-containerservlet:3.1.2')
+    implementation('org.glassfish.jersey.media:jersey-media-jsonjackson:3.1.2')
+    implementation('org.glassfish.jersey.inject:jersey-cdi2-se:3.1.2')
+    implementation('org.jboss.weld.se:weld-se-core:5.1.0.Final')
+
+    //for convert type in rest
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatypejsr310:2.15.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
