--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+
+    //bootstrap
+    implementation 'org.webjars:bootstrap:5.3.2'
 }
 
 test {
